--- a/style.css
+++ b/style.css
@@ -13,10 +13,22 @@ body {
   font-family: "Protest Riot", sans-serif;
 }
 
-.container {
-  height: 100vh;
-  margin: 0 auto;
+img {
+  pointer-events: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+}
 
+.container {
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.question {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,9 +36,9 @@ body {
 }
 
 .milk-mocha-bear {
-  width: 30rem;
-  height: 30rem;
-  margin-bottom: 2rem;
+  width: 40rem;
+  height: 40rem;
+  margin-bottom: 1rem;
 }
 
 .title {
@@ -34,6 +46,7 @@ body {
   color: #f53699;
   text-align: center;
   margin-bottom: 2rem;
+  padding: 0 2rem;
 }
 
 .buttons {
@@ -46,7 +59,7 @@ body {
 }
 
 .btn {
-  padding: 2rem 3.5rem;
+  padding: 2rem 4.5rem;
   border: none;
   border-radius: 4px;
 
@@ -57,6 +70,10 @@ body {
   display: inline-block;
 }
 
+.btn:hover {
+  filter: brightness(85%);
+}
+
 .btn--yes {
   background-color: #40c057;
   transition: all 0.5s ease;
@@ -65,6 +82,17 @@ body {
 .btn--no {
   background-color: #f03e3e;
   transition: all 0.5s ease;
+}
+
+.btn--open {
+  padding: 15rem 10rem;
+  font-family: "Protest Riot", sans-serif;
+  color: #EC1E27;
+  font-size: 2.3rem;
+  background-color: transparent;
+  background-image: url("/assets/img/panda-envelope.png");
+  background-position: center;
+  transition: all 0.5s ease-out;
 }
 
 .hidden {
