--- a/style.css
+++ b/style.css
@@ -87,13 +87,14 @@ img {
 }
 
 .btn--open {
-  padding: 15rem 10rem;
   font-family: "Protest Riot", sans-serif;
   color: #EC1E27;
   font-size: 2.3rem;
 
-  background-color: transparent;
+  padding: 25rem 12rem;
   background-image: url("/assets/img/panda-envelope.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
 }
 
@@ -104,10 +105,6 @@ img {
 @media only screen and (max-width: 600px) {
   .title {
     font-size: 2.5rem;
-  }
-
-  .btn--open {
-    padding: 15rem 10rem;
   }
 
 }
