--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ img {
   font-size: 2.3rem;
 
   padding: 25rem 12rem;
-  background-image: url("/assets/img/panda-envelope.png");
+  background-image: url("https://i.ibb.co/CHPYhck/panda-envelope.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
