--- a/style.css
+++ b/style.css
@@ -89,12 +89,13 @@ img {
 .btn--open {
   font-family: "Protest Riot", sans-serif;
   color: #EC1E27;
-  font-size: 2.3rem;
+  font-size: 3rem;
 
-  padding: 25rem 12rem;
+  width: 50rem;
+  height: 50rem;
   background-image: url("https://i.ibb.co/CHPYhck/panda-envelope.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
 }
 
