added pulsing heart

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ img {
   font-family: "Protest Riot", sans-serif;
   color: #EC1E27;
   font-size: 3rem;
+  background: transparent;
 
   width: 50rem;
   height: 50rem;
@@ -99,6 +100,38 @@ img {
 
 .hidden {
   display: none;
+}
+
+.pulsing-3 {
+  width: 100px;
+  height: 100px;
+  color: #dc1818;
+  background:
+    radial-gradient(circle at 60% 65%, currentColor 62%, #0000 65%) top left,
+    radial-gradient(circle at 40% 65%, currentColor 62%, #0000 65%) top right,
+    linear-gradient(to bottom left, currentColor 42%, #0000 43%) bottom left,
+    linear-gradient(to bottom right, currentColor 42%, #0000 43%) bottom right;
+  background-size: 50% 50%;
+  background-repeat: no-repeat;
+  position: relative;
+
+  transition: all 0.5s ease;
+}
+
+.pulsing-3:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: inherit;
+  opacity: 0.4;
+  animation: pl3 1s infinite;
+}
+
+@keyframes pl3 {
+  to {
+    transform: scale(1.8);
+    opacity: 0
+  }
 }
 
 @media only screen and (max-width: 600px) {
